--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <base href="{{base}}">
     <meta charset="utf8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="{{title}}">
     <meta name="apple-mobile-web-app-title" content="{{title}}">
