--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="{{base}}" />
     <meta charset="utf8" />
-    <script defer src="bundle.mjs" type="module"></script>
+    <script defer src="bundle.main.mjs" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="{{title}}" />
     <meta name="apple-mobile-web-app-title" content="{{title}}" />
@@ -14,8 +14,8 @@
     <title>{{title}}</title>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="bundle.css" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="stylesheet" href="bundle.main.css" />
   </head>
 
   <body></body>
