--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <title>{{title}}</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="bundle.main.css" />
   </head>
